[#50227401] Fix alignment of dataset import column mapping.

--- a/app/assets/stylesheets/dataset/_dataset_table_import.scss
+++ b/app/assets/stylesheets/dataset/_dataset_table_import.scss
@@ -173,10 +173,6 @@ $cell-width: 150px;
 
       .column_mapping {
         font-size: 12px;
-        > span, a {
-          display: inline-block;
-          padding-top: 4px;
-        }
 
         a {
           @include ellipsis;
